hphp/hack/test/typecheck/override_abstract_trait.php.exp
File "override_abstract_trait.php", line 9, characters 28-28:
Cannot re-declare this method as abstract (Typing[4142])
File "override_abstract_trait.php", line 4, characters 19-19:
Previously defined here
